--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ar">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      property="og:title"
+      content="Law Association Students | Kuwait University"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://lsaku.com/" />
+    <meta property="og:image" content="/background.jpg" />
+    <meta name="twitter:card" content="/background.jpg" />
+    <meta
+      name="description"
+      content="المستقلة، كلية التربية | Mostaqilla, Collage of Education"
+    />
+    <meta
+      name="keywords"
+      content="lsa, lsa_ku, Law Association Students, kuwait university, collage of law, جمعية طلبة كلية الحقوق"
+    />
+    <link rel="icon" type="image/png" href="/logo.png" />
+    <title>LSA_KU</title>
   </head>
   <body>
     <div id="root"></div>
