--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       property="og:title"
-      content="Law Association Students | Kuwait University"
+      content="Law Students Association | Kuwait University"
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://lsaku.com/" />
-    <meta property="og:image" content="/background.jpg" />
-    <meta name="twitter:card" content="/background.jpg" />
+    <meta property="og:image" content="/thumbnail.png" />
+    <meta name="twitter:card" content="/thumbnail.png" />
     <meta
       name="description"
-      content="المستقلة، كلية التربية | Mostaqilla, Collage of Education"
+      content="تقدم لكم جمعية طلبة كلية الحقوق كل ما يخص دراستكم في الكلية"
     />
     <meta
       name="keywords"
